5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1578_1331.log
== SUBMITION (2019-03-12 15:44:37) 
-- CODE:
print(50//)
-- EXECUTION TIME:
0.19303
-- ERROR:
  File "/home/codebench/codes/1578/1331/main.py", line 1
    print(50//)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 17:56:07) 
-- CODE:
print(50//3)
print(50%4)
-- OUTPUT:
16
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 17:56:56) 
-- CODE:
print(50//3)
print(50%4)
-- EXECUTION TIME:
0.141924
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
